--- a/src/Python/Final_project/Final project.ipynb
+++ b/src/Python/Final_project/Final project.ipynb
@@ -29,14 +29,96 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Deposited 50. New balance: 150\n",
-      "Withdrew 30. New balance: 120\n",
-      "Current balance: 120\n"
+      "\n",
+      "Choose an option:\n",
+      "1. Deposit\n",
+      "2. Withdraw\n",
+      "3. Check Balance\n",
+      "4. Exit\n",
+      "Current balance: 0\n",
+      "\n",
+      "Choose an option:\n",
+      "1. Deposit\n",
+      "2. Withdraw\n",
+      "3. Check Balance\n",
+      "4. Exit\n",
+      "Deposited 6500.0. New balance: 6500.0\n",
+      "\n",
+      "Choose an option:\n",
+      "1. Deposit\n",
+      "2. Withdraw\n",
+      "3. Check Balance\n",
+      "4. Exit\n",
+      "Withdrew 3654.0. New balance: 2846.0\n",
+      "\n",
+      "Choose an option:\n",
+      "1. Deposit\n",
+      "2. Withdraw\n",
+      "3. Check Balance\n",
+      "4. Exit\n",
+      "Have a good day\n"
      ]
     }
    ],
    "source": [
-    "# Write your answer"
+    "def deposit(balance):\n",
+    "    amount = float(input(\"Enter deposit amount: \"))\n",
+    "    if amount <= 0:\n",
+    "        print(\"Amount must be positive.\")\n",
+    "        return balance\n",
+    "    balance += amount\n",
+    "    print(f\"Deposited {amount}. New balance: {balance}\")\n",
+    "    return balance\n",
+    "\n",
+    "\n",
+    "def withdraw(balance):\n",
+    "    amount = float(input(\"Enter withdrawal amount: \"))\n",
+    "    if amount <= 0:\n",
+    "        print(\"Amount must be positive.\")\n",
+    "        return balance\n",
+    "    if amount > balance:\n",
+    "        print(\"Insufficient funds.\")\n",
+    "        return balance\n",
+    "    balance -= amount\n",
+    "    print(f\"Withdrew {amount}. New balance: {balance}\")\n",
+    "    return balance\n",
+    "\n",
+    "\n",
+    "def check_balance(balance):\n",
+    "    print(f\"Current balance: {balance}\")\n",
+    "    return balance\n",
+    "\n",
+    "\n",
+    "def Bank_Account():\n",
+    "    balance = 0 \n",
+    "\n",
+    "    while True:\n",
+    "        print(\"\\nChoose an option:\")\n",
+    "        print(\"1. Deposit\")\n",
+    "        print(\"2. Withdraw\")\n",
+    "        print(\"3. Check Balance\")\n",
+    "        print(\"4. Exit\")\n",
+    "\n",
+    "        choice = input(\"Enter choice (1-4): \")\n",
+    "\n",
+    "        if choice == \"1\":\n",
+    "            balance = deposit(balance)\n",
+    "\n",
+    "        elif choice == \"2\":\n",
+    "            balance = withdraw(balance)\n",
+    "\n",
+    "        elif choice == \"3\":\n",
+    "            check_balance(balance)\n",
+    "\n",
+    "        elif choice == \"4\":\n",
+    "            print(\"Have a good day\")\n",
+    "            break\n",
+    "\n",
+    "        else:\n",
+    "            print(\"Invalid choice. Please enter a number from 1 to 4.\")\n",
+    "\n",
+    "\n",
+    "Bank_Account()"
    ]
   },
   {
@@ -58,6 +140,120 @@
     "- Add an initializer (__init__) to set the initial balance.\n",
     "- Implement the deposit(), withdraw(), and check_balance() methods.\n",
     "- Demonstrate the use of the class by creating an account and performing operations similar to the function example."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Choose an option:\n",
+      "1. Deposit\n",
+      "2. Withdraw\n",
+      "3. Check Balance\n",
+      "4. Exit\n",
+      "Deposited 6554.0. New balance: 6554.0\n",
+      "\n",
+      "Choose an option:\n",
+      "1. Deposit\n",
+      "2. Withdraw\n",
+      "3. Check Balance\n",
+      "4. Exit\n",
+      "Invalid choice. Please enter a number from 1 to 4.\n",
+      "\n",
+      "Choose an option:\n",
+      "1. Deposit\n",
+      "2. Withdraw\n",
+      "3. Check Balance\n",
+      "4. Exit\n",
+      "Withdrew 1554.0. New balance: 5000.0\n",
+      "\n",
+      "Choose an option:\n",
+      "1. Deposit\n",
+      "2. Withdraw\n",
+      "3. Check Balance\n",
+      "4. Exit\n",
+      "Current balance: 5000.0\n",
+      "\n",
+      "Choose an option:\n",
+      "1. Deposit\n",
+      "2. Withdraw\n",
+      "3. Check Balance\n",
+      "4. Exit\n",
+      "Have a good day\n"
+     ]
+    }
+   ],
+   "source": [
+    "class BankAccount:\n",
+    "\n",
+    "    def __init__(self, initial_balance):\n",
+    "        self.balance = initial_balance\n",
+    "\n",
+    "\n",
+    "    def deposit(self):\n",
+    "        amount = float(input(\"Enter deposit amount: \"))\n",
+    "        if amount <= 0:\n",
+    "            print(\"Amount must be positive.\")\n",
+    "            return self.balance\n",
+    "        self.balance += amount\n",
+    "        print(f\"Deposited {amount}. New balance: {self.balance}\")\n",
+    "        return self.balance\n",
+    "\n",
+    "\n",
+    "    def withdraw(self):\n",
+    "        amount = float(input(\"Enter withdrawal amount: \"))\n",
+    "        if amount <= 0:\n",
+    "            print(\"Amount must be positive.\")\n",
+    "            return self.balance\n",
+    "        if amount > self.balance:\n",
+    "            print(\"Insufficient funds.\")\n",
+    "            return self.balance\n",
+    "        self.balance -= amount\n",
+    "        print(f\"Withdrew {amount}. New balance: {self.balance}\")\n",
+    "        return self.balance\n",
+    "\n",
+    "\n",
+    "    def check_balance(self):\n",
+    "        print(f\"Current balance: {self.balance}\")\n",
+    "        return self.balance\n",
+    "    \n",
+    "        \n",
+    "def main():\n",
+    "    balance = 0 \n",
+    "\n",
+    "    while True:\n",
+    "        print(\"\\nChoose an option:\")\n",
+    "        print(\"1. Deposit\")\n",
+    "        print(\"2. Withdraw\")\n",
+    "        print(\"3. Check Balance\")\n",
+    "        print(\"4. Exit\")\n",
+    "\n",
+    "        choice = input(\"Enter choice (1-4): \")\n",
+    "\n",
+    "        if choice == \"1\":\n",
+    "            balance = deposit(balance)\n",
+    "\n",
+    "        elif choice == \"2\":\n",
+    "            balance = withdraw(balance)\n",
+    "\n",
+    "        elif choice == \"3\":\n",
+    "            check_balance(balance)\n",
+    "\n",
+    "        elif choice == \"4\":\n",
+    "            print(\"Have a good day\")\n",
+    "            break\n",
+    "\n",
+    "        else:\n",
+    "            print(\"Invalid choice. Please enter a number from 1 to 4.\")\n",
+    "\n",
+    "\n",
+    "main()"
    ]
   },
   {
@@ -88,21 +284,65 @@
       "2: Subtract\n",
       "3: Multiply\n",
       "4: Divide\n",
-      "22.0 + 33.0 = 55.0\n"
+      "865.0 - 65.0 = 800.0\n"
      ]
     }
    ],
    "source": [
-    "# Write your answer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Another Solution"
+    "class Calculator:\n",
+    "    def add(self, a, b):\n",
+    "        return a + b\n",
+    "\n",
+    "    def subtract(self, a, b):\n",
+    "        return a - b\n",
+    "\n",
+    "    def multiply(self, a, b):\n",
+    "        return a * b\n",
+    "\n",
+    "    def divide(self, a, b):\n",
+    "        if b == 0:\n",
+    "            print(\"Error: Division by zero\")\n",
+    "        \n",
+    "        else:\n",
+    "            return a / b\n",
+    "\n",
+    "\n",
+    "def main():\n",
+    "    calc = Calculator()\n",
+    "\n",
+    "    print(\"Welcome to the calculator!\")\n",
+    "    print(\"Choose an operation:\")\n",
+    "    print(\"1: Add\")\n",
+    "    print(\"2: Subtract\")\n",
+    "    print(\"3: Multiply\")\n",
+    "    print(\"4: Divide\")\n",
+    "\n",
+    "    choice = input(\"Enter choice (1-4): \")\n",
+    "\n",
+    "    num1 = float(input(\"Enter first number: \"))\n",
+    "    num2 = float(input(\"Enter second number: \"))\n",
+    "\n",
+    "    if choice == \"1\":\n",
+    "        result = calc.add(num1, num2)\n",
+    "        print(f\"{num1} + {num2} = {result}\")\n",
+    "\n",
+    "    elif choice == \"2\":\n",
+    "        result = calc.subtract(num1, num2)\n",
+    "        print(f\"{num1} - {num2} = {result}\")\n",
+    "\n",
+    "    elif choice == \"3\":\n",
+    "        result = calc.multiply(num1, num2)\n",
+    "        print(f\"{num1} * {num2} = {result}\")\n",
+    "\n",
+    "    elif choice == \"4\":\n",
+    "        result = calc.divide(num1, num2)\n",
+    "        print(f\"{num1} / {num2} = {result}\")\n",
+    "\n",
+    "    else:\n",
+    "        print(\"Invalid choice\")\n",
+    "\n",
+    "\n",
+    "main()"
    ]
   },
   {
@@ -139,9 +379,57 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is an animal.\n",
+      "Sound: Woof\n",
+      "\n",
+      "This is an animal.\n",
+      "Sound: Meow\n",
+      "\n",
+      "This is an animal.\n",
+      "Sound: Moo\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your answer"
+    "from abc import ABC, abstractmethod\n",
+    "\n",
+    "\n",
+    "class Animal(ABC):\n",
+    "    @abstractmethod\n",
+    "    def make_sound(self):\n",
+    "        pass\n",
+    "\n",
+    "    def describe(self):\n",
+    "        print(\"This is an animal.\")\n",
+    "\n",
+    "\n",
+    "class Dog(Animal):\n",
+    "    def make_sound(self):\n",
+    "        return \"Woof\"\n",
+    "\n",
+    "\n",
+    "class Cat(Animal):\n",
+    "    def make_sound(self):\n",
+    "        return \"Meow\"\n",
+    "\n",
+    "\n",
+    "class Cow(Animal):\n",
+    "    def make_sound(self):\n",
+    "        return \"Moo\"\n",
+    "\n",
+    "\n",
+    "\n",
+    "animals = [Dog(), Cat(), Cow()]\n",
+    "for animal in animals:\n",
+    "    animal.describe()\n",
+    "    print(\"Sound:\", animal.make_sound())\n",
+    "    print()"
    ]
   },
   {
@@ -185,9 +473,71 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lines: 7\n",
+      "Words: 35\n",
+      "Characters: 219\n",
+      "\n",
+      "File Content:\n",
+      "Welcome to the TextFileReader example.\n",
+      "This file is used to test reading text files in Python.\n",
+      "Object Oriented Programming makes code reusable and organized.\n",
+      "\n",
+      "Python is easy to learn.\n",
+      "Python is powerful.\n",
+      "Python is fun.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your answer"
+    "class TextFileReader:\n",
+    "    def __init__(self, file_path):\n",
+    "        # Initialize the file path\n",
+    "        self.file_path = file_path\n",
+    "        self.content = \"\"\n",
+    "\n",
+    "    def read_file(self):\n",
+    "        # Read file content and store it\n",
+    "        with open(self.file_path, \"r\", encoding=\"utf-8\") as file:\n",
+    "            self.content = file.read()\n",
+    "\n",
+    "    def count_lines(self):\n",
+    "        # Count number of lines\n",
+    "        if not self.content:\n",
+    "            return 0\n",
+    "        return len(self.content.splitlines())\n",
+    "\n",
+    "    def count_words(self):\n",
+    "        # Count number of words\n",
+    "        if not self.content:\n",
+    "            return 0\n",
+    "        return len(self.content.split())\n",
+    "\n",
+    "    def count_characters(self):\n",
+    "        # Count number of characters\n",
+    "        return len(self.content)\n",
+    "\n",
+    "    def display_content(self):\n",
+    "        # Display file content\n",
+    "        print(self.content)\n",
+    "\n",
+    "\n",
+    "# Example usage\n",
+    "reader = TextFileReader(r\"C:\\Users\\Lenovo\\Desktop\\DEPI(R_2)\\ML_git\\GIZ4_AIS2_S1_Ml\\src\\Python\\Final_project\\example.txt\")\n",
+    "\n",
+    "reader.read_file()\n",
+    "\n",
+    "print(\"Lines:\", reader.count_lines())\n",
+    "print(\"Words:\", reader.count_words())\n",
+    "print(\"Characters:\", reader.count_characters())\n",
+    "\n",
+    "print(\"\\nFile Content:\")\n",
+    "reader.display_content()"
    ]
   },
   {
@@ -206,22 +556,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'Welcome': 1, 'No': 3, 'Ali': 4, 'Hi': 2}"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Welcome': 1, 'Ali': 4, 'Hi': 2, 'No': 3}\n"
+     ]
     }
    ],
    "source": [
-    "# Done Before (Skip it)"
+    "def count_words(words):\n",
+    "    frequency = {}\n",
+    "\n",
+    "    for word in words:\n",
+    "        if word in frequency:\n",
+    "            frequency[word] += 1\n",
+    "        else:\n",
+    "            frequency[word] = 1\n",
+    "\n",
+    "    return frequency\n",
+    "\n",
+    "\n",
+    "words_list = [\"Welcome\", \"Ali\", \"Hi\", \"Ali\", \"No\", \"Hi\", \"No\", \"Ali\", \"No\", \"Ali\"]\n",
+    "\n",
+    "result = count_words(words_list)\n",
+    "print(result)"
    ]
   },
   {
@@ -230,24 +592,6 @@
    "source": [
     "### Task-6\n",
     "read file from hard disk"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "George Samuel\n",
-      "AI Amit Diploma\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Write your answer"
    ]
   },
   {
@@ -281,7 +625,56 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write your answer"
+    "def read_txt_file(file_path):\n",
+    "    try:\n",
+    "        with open(file_path, \"r\", encoding=\"utf-8\") as file:\n",
+    "            return file.read()\n",
+    "    except FileNotFoundError:\n",
+    "        return \"Error: File not found.\"\n",
+    "    except IOError:\n",
+    "        return \"Error: Unable to read the file.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'hazem': 'hwadff123', 'ahmed': 'jdhwcc2024', 'amr': 'qweryfd658', 'mohamed': 'efegef54'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "class UserExtractor:\n",
+    "    def __init__(self, file_path):\n",
+    "        self.file_path = file_path\n",
+    "        self.usernames = {}\n",
+    "\n",
+    "    def extract_usernames(self):\n",
+    "        content = read_txt_file(self.file_path)\n",
+    "\n",
+    "        # If an error message is returned\n",
+    "        if content.startswith(\"Error\"):\n",
+    "            return content\n",
+    "\n",
+    "        lines = content.splitlines()\n",
+    "\n",
+    "        for line in lines:\n",
+    "            if \":\" in line:\n",
+    "                username, password = line.split(\":\", 1)\n",
+    "                self.usernames[username.strip()] = password.strip()\n",
+    "\n",
+    "        return self.usernames\n",
+    "    \n",
+    "\n",
+    "\n",
+    "extractor = UserExtractor(\"users.txt\")\n",
+    "result = extractor.extract_usernames()\n",
+    "print(result)"
    ]
   },
   {
@@ -315,27 +708,6 @@
    "metadata": {},
    "source": [
     "![image.png](attachment:image.png)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Department 'Cardiology' added to City Hospital.\n",
-      "Patient 'Alice' added to Cardiology department.\n",
-      "Staff 'Dr. Smith' added to Cardiology department.\n",
-      "Patient Record: No known allergies\n",
-      "Staff Name: Dr. Smith, Age: 45, Position: Cardiologist\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Write your answer"
    ]
   },
   {
