--- a/src/Python/Session_6/Task/np_task.ipynb
+++ b/src/Python/Session_6/Task/np_task.ipynb
@@ -20,12 +20,35 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "39e7161c",
+   "id": "0c053376",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "39e7161c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 0., 0., 0.],\n",
+       "       [0., 1., 0., 0., 0.],\n",
+       "       [0., 0., 1., 0., 0.],\n",
+       "       [0., 0., 0., 1., 0.],\n",
+       "       [0., 0., 0., 0., 1.]])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "def array_factory(mode, shape, value=None):\n",
     "    \"\"\"\n",
     "    Creates various NumPy arrays based on the mode.\n",
@@ -34,8 +57,26 @@
     "    - 'full': Array filled with a specified 'value'.\n",
     "    - 'identity': A square identity matrix of size 'shape'.\n",
     "    \"\"\"\n",
-    "    # TODO: Students implement logic here\n",
-    "    pass"
+    "    if mode == \"zeros\":\n",
+    "        return np.zeros(shape)\n",
+    "\n",
+    "    elif mode == \"ones\":\n",
+    "        return np.ones(shape)\n",
+    "\n",
+    "    elif mode == \"full\":\n",
+    "        if value is None:\n",
+    "            raise ValueError(\"Mode 'full' requires a value.\")\n",
+    "        return np.full(shape, value)\n",
+    "\n",
+    "    elif mode == \"identity\":\n",
+    "        if not isinstance(shape, int):\n",
+    "            raise ValueError(\"Mode 'identity' requires an integer shape.\")\n",
+    "        return np.eye(shape)\n",
+    "\n",
+    "    else:\n",
+    "        raise ValueError(f\"Unknown mode: {mode}\")\n",
+    "    \n",
+    "array_factory('identity' , 5)"
    ]
   },
   {
@@ -50,10 +91,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "18fa6c5f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2]\n",
+      " [3 4]\n",
+      " [5 6]\n",
+      " [7 8]]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -67,22 +119,31 @@
     "        # Convert inputs to ndarray to ensure they are processed as Tensors \n",
     "        # arr = np.array(data1)\n",
     "\n",
-    "        arr1 = # TODO\n",
-    "        arr2 = # TODO\n",
+    "        arr1 = np.array(data1)\n",
+    "        arr2 = np.array(data2)\n",
     "\n",
     "        # Rule: Change the shape of arr1 to new_shape \n",
     "        # Common usage: turning a vector (1D) into a matrix (2D)  by using reshape function \n",
-    "        reshaped_arr1 = # TODO\n",
+    "        reshaped_arr1 = arr1.reshape(new_shape)\n",
+    "\n",
     "\n",
     "        # Rule: Vertical Stacking (vstack) \n",
     "        # Requirement: Both matrices must have the same number of columns\n",
-    "        combined_dataset = # TODO\n",
+    "        combined_dataset = np.vstack((reshaped_arr1, arr2))\n",
     "\n",
-    "        return # TODO\n",
+    "        return combined_dataset\n",
     "\n",
     "    except ValueError as e:\n",
     "        # Handle cases where reshape size doesn't match or stack columns don't match\n",
-    "        raise ValueError(f\"Company-grade Error: {e}\")"
+    "        raise ValueError(f\"Company-grade Error: {e}\")\n",
+    "    \n",
+    "\n",
+    "data1 = [1, 2, 3, 4]\n",
+    "data2 = [[5, 6], [7, 8]]\n",
+    "new_shape = (2, 2)\n",
+    "\n",
+    "result = secure_reshape_and_stack(data1, data2, new_shape)\n",
+    "print(result)"
    ]
   },
   {
@@ -97,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "e8448e11",
    "metadata": {},
    "outputs": [],
@@ -110,14 +171,15 @@
     "    and replaces them with a new value.\n",
     "    \"\"\"\n",
     "    # 1. Convert input to a numpy array (ndarray)\n",
-    "    arr = # TODO\n",
+    "    arr = np.array(arr)\n",
     "    # 2. Define the condition: elementwise comparison \n",
     "    # This creates a Boolean numpy array \n",
-    "    condition = # TODO\n",
+    "    condition = arr >= threshold\n",
     "    \n",
     "    # 3. Apply Modification using np.where() \n",
     "    # np.where(condition, value_if_true, value_if_false)\n",
-    "    modified_arr = #TODO\n",
+    "    modified_arr = np.where(condition, replacement_value, arr)\n",
+    "\n",
     "    \n",
     "    return modified_arr"
    ]
@@ -132,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "73cfc2d3",
    "metadata": {},
    "outputs": [
@@ -142,19 +204,8 @@
      "text": [
       "[[ 1  2  3]\n",
       " [ 4  5  6]\n",
-      " [ 7  8  9]\n",
-      " [10 11 12]]\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+      " [-1 -1 -1]\n",
+      " [-1 -1 -1]]\n"
      ]
     }
    ],
@@ -166,15 +217,17 @@
     "branch_b = [[7, 8, 9], \n",
     "            [10, 11, 12]]\n",
     "\n",
+    "combined = secure_reshape_and_stack(branch_a, branch_b, (2, 3))\n",
+    "\n",
     "# Reshape A to 2x3 and stack with B\n",
-    "final_report = apply_threshold(branch_a, branch_b, (2, 3))\n",
+    "final_report = apply_threshold(combined, threshold=7, replacement_value=-1)\n",
     "print(final_report)\n",
     "# Resulting shape: (4, 3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "id": "fa2cf838",
    "metadata": {},
    "outputs": [
@@ -184,7 +237,7 @@
        "array([  1, -20, -20])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,19 +246,11 @@
     "v= np.array([1,2,3])\n",
     "apply_threshold(v,2,-20)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b2662174",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": ".env",
    "language": "python",
    "name": "python3"
   },
