--- a/src/Python/Workshop/WorkShop_2.ipynb
+++ b/src/Python/Workshop/WorkShop_2.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "id": "7648c216",
    "metadata": {},
    "outputs": [
@@ -69,17 +69,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " the computer select scissor the player select paper\n",
+      " the computer select paper the player select Pa per\n",
       "computer wins\n",
       "\n",
-      " the computer select rock the player select rock\n",
-      "Draw\n",
+      " the computer select paper the player select \n",
+      "computer wins\n",
       "\n",
-      " the computer select scissor the player select scissor\n",
-      "Draw\n",
+      " the computer select rock the player select \n",
+      "computer wins\n",
       "\n",
       "\n",
-      " the final score for player: 0 and computer score: 1\n"
+      " the final score for player: 0 and computer score: 3\n"
      ]
     }
    ],
@@ -90,7 +90,7 @@
     "    score = {\"player\": 0 , \"computer\": 0 }\n",
     "\n",
     "    for i in range(3):\n",
-    "        player = input(\" 'paper' / 'rock' / 'scissor' \")\n",
+    "        player = input(\" 'paper' / 'rock' / 'scissor' \").lower().strip()\n",
     "        computer = random.choice(choicess)\n",
     "        print(f\" the computer select {computer} the player select {player}\")\n",
     "\n",
