--- a/src/ML/Session_1/Assignment/Linear_Class.ipynb
+++ b/src/ML/Session_1/Assignment/Linear_Class.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 42,
    "id": "b2caf5b5",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 45,
    "id": "af49616f",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
     "        return self\n",
     "\n",
     "\n",
-    "    def plot_training(self, x, y):\n",
+    "    def plot(self, x, y):\n",
     "        plt.figure(figsize=(12, 5))\n",
     "\n",
     "        plt.subplot(1, 2, 1)\n",
@@ -71,7 +71,6 @@
     "        plt.scatter(x, y, color=\"blue\", label=\"Data Points\")\n",
     "        plt.plot(x, self.predict(x), color=\"red\", label=\"Regression Line\")\n",
     "        plt.legend()\n",
-    "\n",
     "        plt.show()\n",
     "\n",
     "    def get_params(self):\n",
@@ -83,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 46,
    "id": "b611e871",
    "metadata": {},
    "outputs": [
@@ -119,8 +118,16 @@
     "\n",
     "print(\"Optimized parameters:\", model.get_params())\n",
     "\n",
-    "model.plot_training(x, y)"
+    "model.plot(x, y)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3db5e1ee",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
