--- a/src/Python/Problem_solving/Problems_1-3.ipynb
+++ b/src/Python/Problem_solving/Problems_1-3.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 1,
    "id": "8f6c1254",
    "metadata": {},
    "outputs": [
@@ -26,7 +26,7 @@
        "'battle no requires which that is victory greatest The'"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,19 +74,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "id": "27e77e20",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'Hazem does not play banjo'"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hazem does not play banjo\n",
+      "Rana plays banjo\n"
+     ]
     }
    ],
    "source": [
@@ -99,7 +97,8 @@
     "name_1 = \"Hazem\"\n",
     "name_2 = \"Rana\"\n",
     "\n",
-    "are_you_playing_banjo(name_1)"
+    "print(are_you_playing_banjo(name_1))\n",
+    "print(are_you_playing_banjo(name_2))"
    ]
   },
   {
@@ -160,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 3,
    "id": "e69da023",
    "metadata": {},
    "outputs": [
@@ -170,7 +169,7 @@
        "[0, 2]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 4,
    "id": "d17b768f",
    "metadata": {},
    "outputs": [
@@ -217,7 +216,7 @@
        "2"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
