Data analysis Task

--- a/src/Data_Analysis/Data_Analysis Task/Data Analysis Task.ipynb
+++ b/src/Data_Analysis/Data_Analysis Task/Data Analysis Task.ipynb
@@ -1534,7 +1534,7 @@
    "id": "939c0bb7",
    "metadata": {},
    "source": [
-    "# The last version to continue on it i will replace missing values by median in numercal columns because mean are sensitive to outliers and use mode for categorical columns"
+    "# To continue the preprocessing phase, missing values in numerical columns will be imputed using the median, as the mean is sensitive to outliers. For categorical variables, the mode will be used for imputation."
    ]
   },
   {
