--- a/src/Python/Problem_solving/Problems_4-7.ipynb
+++ b/src/Python/Problem_solving/Problems_4-7.ipynb
@@ -36,26 +36,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "e1d7e3a4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class ListNode:\n",
+    "    def __init__(self, val=0, next=None):\n",
+    "        self.val = val\n",
+    "        self.next = next\n",
+    "\n",
+    "\n",
+    "class Solution:\n",
+    "    def addTwoNumbers(self, l1, l2):\n",
+    "        dummy = ListNode(0)\n",
+    "        current = dummy\n",
+    "        carry = 0\n",
+    "\n",
+    "        while l1 or l2 or carry:\n",
+    "            x = l1.val if l1 else 0\n",
+    "            y = l2.val if l2 else 0\n",
+    "\n",
+    "            total = x + y + carry\n",
+    "            carry = total // 10\n",
+    "\n",
+    "            current.next = ListNode(total % 10)\n",
+    "            current = current.next\n",
+    "\n",
+    "            if l1:\n",
+    "                l1 = l1.next\n",
+    "            if l2:\n",
+    "                l2 = l2.next\n",
+    "\n",
+    "        return dummy.next\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "def build_linked_list(values):\n",
+    "\n",
+    "    dummy = ListNode(0)\n",
+    "    current = dummy\n",
+    "    for v in values:\n",
+    "        current.next = ListNode(v)\n",
+    "        current = current.next\n",
+    "    return dummy.next\n",
+    "\n",
+    "\n",
+    "def print_linked_list(head):\n",
+    "\n",
+    "    result = []\n",
+    "    while head:\n",
+    "        result.append(head.val)\n",
+    "        head = head.next\n",
+    "    print(result)\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9551a58f",
+   "execution_count": 16,
+   "id": "bfe03d19",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[7, 0, 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l1 = build_linked_list([2, 4, 3])\n",
+    "l2 = build_linked_list([5, 6, 4])\n",
+    "\n",
+    "sol = Solution()\n",
+    "result = sol.addTwoNumbers(l1, l2)\n",
+    "\n",
+    "print_linked_list(result)"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "9c483765",
    "metadata": {},
    "source": [
-    "Roman numerals are represented by seven different symbols: I, V, X, L, C, D and M.\n",
+    "5.Roman numerals are represented by seven different symbols: I, V, X, L, C, D and M.\n",
     "\n",
     "Symbol       Value\n",
     "\n",
@@ -106,6 +173,190 @@
     "1 <= s.length <= 15\n",
     "s contains only the characters ('I', 'V', 'X', 'L', 'C', 'D', 'M').\n",
     "It is guaranteed that s is a valid roman numeral in the range [1, 3999]."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "f12e67c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def romanToInt(s: str) -> int:\n",
+    "        roman = {\n",
+    "            'I': 1,\n",
+    "            'V': 5,\n",
+    "            'X': 10,\n",
+    "            'L': 50,\n",
+    "            'C': 100,\n",
+    "            'D': 500,\n",
+    "            'M': 1000\n",
+    "        }\n",
+    "\n",
+    "        total = 0\n",
+    "        n = len(s)\n",
+    "\n",
+    "        for i in range(n):\n",
+    "            value = roman[s[i]]\n",
+    "\n",
+    "            if i + 1 < n and value < roman[s[i + 1]]:\n",
+    "                total -= value\n",
+    "            else:\n",
+    "                total += value\n",
+    "\n",
+    "        return total\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "e089d183",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MCMXCIV: 1994\n",
+      "LVIII: 58\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'MCMXCIV: {romanToInt('MCMXCIV')}')\n",
+    "print(f'LVIII: {romanToInt('LVIII')}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fe098e42",
+   "metadata": {},
+   "source": [
+    "6.Search Insert Position\n",
+    "\n",
+    "Given a sorted array of distinct integers and a target value, return the index if the target is found. If not, return the index where it would be if it were inserted in order.\n",
+    "\n",
+    "You must write an algorithm with O(log n) runtime complexity."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "691abe1d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def searchInsert(nums, target):\n",
+    "        left, right = 0, len(nums) - 1\n",
+    "\n",
+    "        while left <= right:\n",
+    "            mid = (left + right) // 2\n",
+    "\n",
+    "            if nums[mid] == target:\n",
+    "                return mid\n",
+    "            elif nums[mid] < target:\n",
+    "                left = mid + 1\n",
+    "            else:\n",
+    "                right = mid - 1\n",
+    "\n",
+    "        return left\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "e16c2d03",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "1\n",
+      "4\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(searchInsert([1,3,5,6], 5))\n",
+    "print(searchInsert([1,3,5,6], 2))\n",
+    "print(searchInsert([1,3,5,6], 7))\n",
+    "print(searchInsert([1,3,5,6], 0))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e2c2966",
+   "metadata": {},
+   "source": [
+    "7.Basic Calculator II\n",
+    "\n",
+    "Given a string s which represents an expression, evaluate this expression and return its value. \n",
+    "\n",
+    "The integer division should truncate toward zero.\n",
+    "\n",
+    "You may assume that the given expression is always valid. All intermediate results will be in the range of [-231, 231 - 1].\n",
+    "\n",
+    "Note: You are not allowed to use any built-in function which evaluates strings as mathematical expressions, such"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "cdfea341",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate(s):\n",
+    "        s = s.replace(\" \", \"\")\n",
+    "        stack = []\n",
+    "        num = 0\n",
+    "        sign = '+'\n",
+    "\n",
+    "        for i, ch in enumerate(s):\n",
+    "            if ch.isdigit():\n",
+    "                num = num * 10 + int(ch)\n",
+    "\n",
+    "            if ch in '+-*/' or i == len(s) - 1:\n",
+    "                if sign == '+':\n",
+    "                    stack.append(num)\n",
+    "                elif sign == '-':\n",
+    "                    stack.append(-num)\n",
+    "                elif sign == '*':\n",
+    "                    stack[-1] *= num\n",
+    "                elif sign == '/':\n",
+    "                    stack[-1] = int(stack[-1] / num)\n",
+    "\n",
+    "                sign = ch\n",
+    "                num = 0\n",
+    "\n",
+    "        return sum(stack)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "53e32e1c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "1\n",
+      "5\n",
+      "13\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(calculate(\"3+2*2\"))\n",
+    "print(calculate(\"3/2\"))\n",
+    "print(calculate(\" 3+5 / 2 \"))\n",
+    "print(calculate(\"14-3/2\"))\n"
    ]
   }
  ],
