--- a/src/Data_Analysis/Final_Project/data science-Final-Project.ipynb
+++ b/src/Data_Analysis/Final_Project/data science-Final-Project.ipynb
@@ -53,7 +53,7 @@
    "source": [
     "# Part I - (Dataset Exploration for Ford GoBike)\n",
     "\n",
-    "### worked by (Your Name/2025 )\n",
+    "### worked by (Hazem Amr Mohamed/2025 )\n",
     "\n",
     "## Introduction\n",
     "\n",
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "ca12f426",
    "metadata": {
     "execution": {
@@ -223,10 +223,198 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>duration_sec</th>\n",
+       "      <th>start_time</th>\n",
+       "      <th>end_time</th>\n",
+       "      <th>start_station_id</th>\n",
+       "      <th>start_station_name</th>\n",
+       "      <th>start_station_latitude</th>\n",
+       "      <th>start_station_longitude</th>\n",
+       "      <th>end_station_id</th>\n",
+       "      <th>end_station_name</th>\n",
+       "      <th>end_station_latitude</th>\n",
+       "      <th>end_station_longitude</th>\n",
+       "      <th>bike_id</th>\n",
+       "      <th>user_type</th>\n",
+       "      <th>member_birth_year</th>\n",
+       "      <th>member_gender</th>\n",
+       "      <th>bike_share_for_all_trip</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>52185</td>\n",
+       "      <td>32:10.1</td>\n",
+       "      <td>01:56.0</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>Montgomery St BART Station (Market St at 2nd St)</td>\n",
+       "      <td>37.789625</td>\n",
+       "      <td>-122.400811</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>Commercial St at Montgomery St</td>\n",
+       "      <td>37.794231</td>\n",
+       "      <td>-122.402923</td>\n",
+       "      <td>4902</td>\n",
+       "      <td>Customer</td>\n",
+       "      <td>1984.0</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>42521</td>\n",
+       "      <td>53:21.8</td>\n",
+       "      <td>42:03.1</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>The Embarcadero at Steuart St</td>\n",
+       "      <td>37.791464</td>\n",
+       "      <td>-122.391034</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>Berry St at 4th St</td>\n",
+       "      <td>37.775880</td>\n",
+       "      <td>-122.393170</td>\n",
+       "      <td>2535</td>\n",
+       "      <td>Customer</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>61854</td>\n",
+       "      <td>13:13.2</td>\n",
+       "      <td>24:08.1</td>\n",
+       "      <td>86.0</td>\n",
+       "      <td>Market St at Dolores St</td>\n",
+       "      <td>37.769305</td>\n",
+       "      <td>-122.426826</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>Powell St BART Station (Market St at 4th St)</td>\n",
+       "      <td>37.786375</td>\n",
+       "      <td>-122.404904</td>\n",
+       "      <td>5905</td>\n",
+       "      <td>Customer</td>\n",
+       "      <td>1972.0</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>36490</td>\n",
+       "      <td>54:26.0</td>\n",
+       "      <td>02:36.8</td>\n",
+       "      <td>375.0</td>\n",
+       "      <td>Grove St at Masonic Ave</td>\n",
+       "      <td>37.774836</td>\n",
+       "      <td>-122.446546</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>Central Ave at Fell St</td>\n",
+       "      <td>37.773311</td>\n",
+       "      <td>-122.444293</td>\n",
+       "      <td>6638</td>\n",
+       "      <td>Subscriber</td>\n",
+       "      <td>1989.0</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1585</td>\n",
+       "      <td>54:18.5</td>\n",
+       "      <td>20:44.1</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>Frank H Ogawa Plaza</td>\n",
+       "      <td>37.804562</td>\n",
+       "      <td>-122.271738</td>\n",
+       "      <td>222.0</td>\n",
+       "      <td>10th Ave at E 15th St</td>\n",
+       "      <td>37.792714</td>\n",
+       "      <td>-122.248780</td>\n",
+       "      <td>4898</td>\n",
+       "      <td>Subscriber</td>\n",
+       "      <td>1974.0</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   duration_sec start_time end_time  start_station_id  \\\n",
+       "0         52185    32:10.1  01:56.0              21.0   \n",
+       "1         42521    53:21.8  42:03.1              23.0   \n",
+       "2         61854    13:13.2  24:08.1              86.0   \n",
+       "3         36490    54:26.0  02:36.8             375.0   \n",
+       "4          1585    54:18.5  20:44.1               7.0   \n",
+       "\n",
+       "                                 start_station_name  start_station_latitude  \\\n",
+       "0  Montgomery St BART Station (Market St at 2nd St)               37.789625   \n",
+       "1                     The Embarcadero at Steuart St               37.791464   \n",
+       "2                           Market St at Dolores St               37.769305   \n",
+       "3                           Grove St at Masonic Ave               37.774836   \n",
+       "4                               Frank H Ogawa Plaza               37.804562   \n",
+       "\n",
+       "   start_station_longitude  end_station_id  \\\n",
+       "0              -122.400811            13.0   \n",
+       "1              -122.391034            81.0   \n",
+       "2              -122.426826             3.0   \n",
+       "3              -122.446546            70.0   \n",
+       "4              -122.271738           222.0   \n",
+       "\n",
+       "                               end_station_name  end_station_latitude  \\\n",
+       "0                Commercial St at Montgomery St             37.794231   \n",
+       "1                            Berry St at 4th St             37.775880   \n",
+       "2  Powell St BART Station (Market St at 4th St)             37.786375   \n",
+       "3                        Central Ave at Fell St             37.773311   \n",
+       "4                         10th Ave at E 15th St             37.792714   \n",
+       "\n",
+       "   end_station_longitude  bike_id   user_type  member_birth_year  \\\n",
+       "0            -122.402923     4902    Customer             1984.0   \n",
+       "1            -122.393170     2535    Customer                NaN   \n",
+       "2            -122.404904     5905    Customer             1972.0   \n",
+       "3            -122.444293     6638  Subscriber             1989.0   \n",
+       "4            -122.248780     4898  Subscriber             1974.0   \n",
+       "\n",
+       "  member_gender bike_share_for_all_trip  \n",
+       "0          Male                      No  \n",
+       "1           NaN                      No  \n",
+       "2          Male                      No  \n",
+       "3         Other                      No  \n",
+       "4          Male                     Yes  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Load my dataset using pandas Dataframe\n",
-    "\n"
+    "df = pd.read_csv('fordgobike-tripdataFor201902.csv')\n",
+    "df.head()"
    ]
   },
   {
@@ -2263,7 +2451,7 @@
    "sourceType": "notebook"
   },
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": ".env",
    "language": "python",
    "name": "python3"
   },
@@ -2277,7 +2465,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0rc2"
+   "version": "3.12.9"
   },
   "papermill": {
    "default_parameters": {},
