--- a/src/Data_Analysis/Final_Project/data science-Final-Project.ipynb
+++ b/src/Data_Analysis/Final_Project/data science-Final-Project.ipynb
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 1,
    "id": "be25aff1",
    "metadata": {
     "execution": {
@@ -1015,9 +1015,9 @@
     " \n",
     "- Most variables are numerical and categorical in nature , and here are **dtypes summary :**\n",
     "\n",
-    "        - Numerical (7)\n",
-    "        - Date and time (2)\n",
-    "        - Categorical (7)\n",
+    "        - str (7)\n",
+    "        - int (2)\n",
+    "        - float (7)\n",
     "        \n",
     "\n",
     "\n",
@@ -1971,7 +1971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "c713848e",
    "metadata": {
     "execution": {
@@ -2021,7 +2021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "debd427e",
    "metadata": {},
    "outputs": [
@@ -2155,7 +2155,7 @@
        "bike_share_for_all_trip     0.0  0.000000"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2166,7 +2166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "d325b144",
    "metadata": {
     "execution": {
@@ -2194,7 +2194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "37328e6f",
    "metadata": {
     "execution": {
@@ -2242,7 +2242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "id": "f965efd2",
    "metadata": {
     "execution": {
@@ -2283,7 +2283,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2330,7 +2330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 21,
    "id": "8a75c2b0",
    "metadata": {
     "execution": {
@@ -2364,7 +2364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "77931f89",
    "metadata": {},
    "outputs": [
@@ -2526,7 +2526,7 @@
        "183415          Male                      No  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2538,7 +2538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 23,
    "id": "216aa324",
    "metadata": {},
    "outputs": [],
@@ -2548,7 +2548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 24,
    "id": "e225049c",
    "metadata": {},
    "outputs": [
@@ -2592,7 +2592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 25,
    "id": "b0ca328c",
    "metadata": {
     "execution": {
@@ -2619,7 +2619,7 @@
        "      dtype='str')"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2672,7 +2672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 26,
    "id": "6d5e42ea",
    "metadata": {
     "execution": {
@@ -2701,7 +2701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 27,
    "id": "53487898",
    "metadata": {
     "execution": {
@@ -2728,7 +2728,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2740,7 +2740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 28,
    "id": "8cad598c",
    "metadata": {
     "execution": {
@@ -2770,7 +2770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 29,
    "id": "08f24ab6",
    "metadata": {},
    "outputs": [
@@ -2796,7 +2796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 30,
    "id": "aa3954cd",
    "metadata": {},
    "outputs": [],
@@ -2817,7 +2817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 31,
    "id": "6589bc1a",
    "metadata": {},
    "outputs": [
@@ -2843,7 +2843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 32,
    "id": "6d01702a",
    "metadata": {},
    "outputs": [
@@ -2854,7 +2854,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2865,7 +2865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 33,
    "id": "129b23cd",
    "metadata": {
     "execution": {
@@ -2891,7 +2891,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2904,7 +2904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 34,
    "id": "148630fe",
    "metadata": {
     "execution": {
@@ -2929,7 +2929,7 @@
        "np.float64(33.75)"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2945,7 +2945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 35,
    "id": "4a619022",
    "metadata": {
     "execution": {
@@ -2975,7 +2975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 36,
    "id": "8d2dee40",
    "metadata": {},
    "outputs": [
@@ -3043,7 +3043,7 @@
        "4          1585         26.42"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3054,7 +3054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 37,
    "id": "f39d9e69",
    "metadata": {
     "execution": {
@@ -3080,7 +3080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 38,
    "id": "bf214403",
    "metadata": {},
    "outputs": [
@@ -3154,7 +3154,7 @@
        "4          1585         26.42         0.44"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3166,7 +3166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 39,
    "id": "d19a8370",
    "metadata": {},
    "outputs": [
@@ -3261,7 +3261,7 @@
        "max        54.000000    1424.070000      23.730000"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3339,7 +3339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 55,
    "id": "da155188",
    "metadata": {
     "execution": {
@@ -3526,7 +3526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 41,
    "id": "b16e11f1",
    "metadata": {
     "execution": {
@@ -3552,7 +3552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 42,
    "id": "bf5247de",
    "metadata": {
     "execution": {
@@ -3612,7 +3612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 43,
    "id": "65500a29",
    "metadata": {
     "execution": {
@@ -3671,7 +3671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 44,
    "id": "d7bee747",
    "metadata": {
     "execution": {
@@ -3787,7 +3787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 45,
    "id": "1bc30891",
    "metadata": {
     "execution": {
@@ -3855,7 +3855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 46,
    "id": "c5cfff86",
    "metadata": {
     "execution": {
@@ -3925,7 +3925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 47,
    "id": "a9af5bd1",
    "metadata": {
     "execution": {
@@ -3985,7 +3985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 48,
    "id": "3b90bb19",
    "metadata": {
     "execution": {
@@ -4045,7 +4045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 49,
    "id": "6dacd14a",
    "metadata": {
     "execution": {
@@ -4133,7 +4133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 50,
    "id": "94da7cd0",
    "metadata": {},
    "outputs": [],
@@ -4161,7 +4161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 51,
    "id": "ddba4e75",
    "metadata": {
     "execution": {
@@ -4226,7 +4226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 52,
    "id": "4e1851c8",
    "metadata": {
     "execution": {
@@ -4302,7 +4302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 53,
    "id": "76e8afc4",
    "metadata": {
     "execution": {
@@ -4327,7 +4327,7 @@
        "'\"\"This time I will use heatmap  to explain how Correlation between data_stat variables\\n\\nin the dataset in more clear and specific percentage'"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
